Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/generics/wildcards/neg/CastFail.out
CastFail.java:28:26: compiler.err.prob.found.req: (compiler.misc.inconvertible.types: CastFail.AA<java.lang.Number>, CastFail.AB<java.lang.String>)
CastFail.java:29:26: compiler.err.prob.found.req: (compiler.misc.inconvertible.types: CastFail.AA<java.util.Vector<java.lang.Number>>, CastFail.AC<java.lang.String>)
CastFail.java:30:26: compiler.err.prob.found.req: (compiler.misc.inconvertible.types: CastFail.AA<java.util.Stack<java.lang.String>>, CastFail.AC<java.lang.String>)
CastFail.java:31:26: compiler.err.prob.found.req: (compiler.misc.inconvertible.types: CastFail.AA<java.util.Vector<? extends java.lang.Number>>, CastFail.AD<java.lang.String>)
CastFail.java:32:26: compiler.err.prob.found.req: (compiler.misc.inconvertible.types: CastFail.AA<java.util.Vector<? super java.lang.String>>, CastFail.AE<java.lang.Number>)
CastFail.java:33:26: compiler.err.prob.found.req: (compiler.misc.inconvertible.types: CastFail.AA<java.lang.Number[]>, CastFail.AF<java.lang.String>)
CastFail.java:34:21: compiler.err.prob.found.req: (compiler.misc.inconvertible.types: CastFail.AA<java.lang.Number>, CastFail.AG<?>)
CastFail.java:48:21: compiler.err.prob.found.req: (compiler.misc.inconvertible.types: CastFail.BA<java.lang.String>, CastFail.BC<?>)
CastFail.java:49:26: compiler.err.prob.found.req: (compiler.misc.inconvertible.types: CastFail.BB<java.lang.String,java.lang.Number>, CastFail.BD<java.lang.String>)
CastFail.java:50:26: compiler.err.prob.found.req: (compiler.misc.inconvertible.types: CastFail.BB<java.lang.Number,java.lang.String>, CastFail.BD<java.lang.String>)
CastFail.java:71:20: compiler.err.prob.found.req: (compiler.misc.inconvertible.types: CastFail.CE<compiler.misc.type.captureof: 1, ?>, CastFail.CD<?>)
CastFail.java:72:20: compiler.err.prob.found.req: (compiler.misc.inconvertible.types: CastFail.CD<compiler.misc.type.captureof: 1, ?>, CastFail.CE<?>)
CastFail.java:73:26: compiler.err.prob.found.req: (compiler.misc.inconvertible.types: CastFail.CD<java.lang.String>, CastFail.CE<java.lang.Number>)
CastFail.java:89:26: compiler.err.prob.found.req: (compiler.misc.inconvertible.types: CastFail.DA<java.lang.Integer>, CastFail.DA<java.lang.Number>)
CastFail.java:90:37: compiler.err.prob.found.req: (compiler.misc.inconvertible.types: CastFail.DA<java.lang.Number>, CastFail.DA<? extends java.lang.Integer>)
CastFail.java:91:34: compiler.err.prob.found.req: (compiler.misc.inconvertible.types: CastFail.DA<java.lang.Integer>, CastFail.DA<? super java.lang.Number>)
CastFail.java:92:38: compiler.err.prob.found.req: (compiler.misc.inconvertible.types: CastFail.DA<compiler.misc.type.captureof: 1, ? extends java.lang.String>, CastFail.DA<? extends java.lang.Runnable>)
CastFail.java:93:34: compiler.err.prob.found.req: (compiler.misc.inconvertible.types: CastFail.DA<compiler.misc.type.captureof: 1, ? extends java.lang.Integer>, CastFail.DA<? super java.lang.Number>)
CastFail.java:96:36: compiler.err.prob.found.req: (compiler.misc.inconvertible.types: CastFail.DA<I>, CastFail.DA<? extends java.lang.String>)
CastFail.java:97:21: compiler.err.prob.found.req: (compiler.misc.inconvertible.types: CastFail.DA<R>, CastFail.DA<S>)
CastFail.java:100:21: compiler.err.prob.found.req: (compiler.misc.inconvertible.types: CastFail.DA<compiler.misc.type.captureof: 1, ? super java.lang.String>, CastFail.DC<?>)
21 errors
